--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&display=swap"
       rel="stylesheet"
     />
-    <title>React + Webpack</title>
+    <title>Riddey Task</title>
   </head>
   <body>
     <div id="root"></div>
